# pdf-chat

./: .env.example  Dockerfile  README.md  docker-compose-stack-dev.yaml  docker-compose-stack.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-publish-docker-image-on-tag.yaml  deploy-chat-with-pdf-stack.yaml  try-deploy-and-evaluate-chat-with-pdf-stack.yaml  try-deploy-chat-with-pdf-stack.yaml
assets/css/: experiment-detail.css  experiments.css
assets/datasets/dataset-example/: questions_str.json
assets/eval/: questions_split.json  questions_str.json
datasets/dataset-example/: questions_str.json
scripts/: count_tokens_in_jsonl.py
src/chat_toolbox/: chat_models.py  pyproject.toml
src/chat_toolbox/tool_usage/: tool_abstract.py  tool_utils.py
src/core/: app.py  args.py  configs.py  globals.py  logger.py  main.py  server.py  telemetry.py
src/core/processing/: p_models.py  p_utils.py
src/core/processing/local_fs/: const.py  models.py  process_file.py  process_paragraphs.py  save_strategies.py  (+1 more)
src/core/repositories/: repo_abstract.py  repo_files.py  repo_redis.py
src/core/routers/: router_base.py  router_experiments.py  router_files.py  router_mcp_like.py  router_mcpl.py  schemas.py
src/core/tools/: tool_abstract.py  tool_context.py  tool_list_files.py  tool_search_in_file.py  tool_utils.py  tools.py
src/core/workers/: w_abstract.py  w_cleanup.py  w_extractor.py  w_processor.py  w_utils.py  w_watchdog.py
src/coxit/: pyproject.toml
src/coxit/extractor/: const.py  file_reader.py  highlight_viz.py  page_classifier.py  paragraph_parser.py  pdf_extractor.py  section_parser.py
src/eval/: eval_utils.py  extract_and_process.py  globals.py  main.py  pyproject.toml  questions.py  subchat.py
src/evaluation/: README.md  args.py  eval.py  extract_and_process.py  globals.py  golden_answers.py  main.py  metering.py  pyproject.toml  questions.py  rag_answers.py  save_results.py  subchat.py  tui.py
src/evaluation/dataset/: dataset_init.py  dataset_metadata.py  eval_questions_load.py  split_questions_create.py
src/evaluation/stage1_extraction/: extract_and_process.py
src/evaluation/stage2_answers/: ans_golden.py  ans_rag.py
src/evaluation/stage3_evaluation/: eval_chat.py  eval_collect_metrics.py  eval_utils.py  llm_judge.py  metrics.py
src/evaluation/stage4_analysis/: anal_all_reports.py  anal_reports_md.py  anal_results.py
src/extraction/: pyproject.toml
src/extraction/pdf_extractor/: file_reader.py  highlight_viz.py
src/openai/: api_files.py  api_vector_store.py
src/openai_wrappers/: api_embeddings.py  api_files.py  api_vector_store.py  pyproject.toml  types.py  utils.py
src/processing/: p_models.py  pyproject.toml
src/processing/local_fs/: const.py  models.py  process_file.py  process_paragraphs.py  worker.py
src/processing/openai_fs/: const.py  process_file.py  process_paragraphs.py  uploads.py  worker.py
src/telemetry/: models.py  pyproject.toml  tele_writer.py
src/telemetry/aggregations/: requests_stats.py
src/vectors/: pyproject.toml
src/vectors/repositories/: repo_milvus.py  repo_redis.py
src/vectors/save_strategies/: save_milvus.py  save_redis.py
src/vectors/search/: search.py  search_milvus.py  search_openai.py  search_redis.py  search_utils.py
(+4 files in other folders)
