[project]
name = "chat-with-pdf-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "chat-tools",
    "fastapi>=0.115.11",
    "openai>=1.68.2",
    "pymupdf>=1.25.4",
    "pymupdf-fonts",
    "pymupdf4llm>=0.0.17",
    "scalar-fastapi>=1.0.3",
    "termcolor>=2.5.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/coxit",
    "src/openai_wrappers",
]

[tool.uv.sources]
core = { workspace = true }
coxit = { workspace = true }
openai_wrappers = { workspace = true }
chat-tools = { git = "https://github.com/valaises/chat_tools.git" }
