[project]
name = "chat-with-pdf-poc"

# Use alpha (a) for early internal testing
# Use beta (b) for wider testing when features are complete
# Use release candidates (rc) for final pre-release testing
# Use .devN for dev release
# Use +experimental for experimental builds
# Use incrementing numbers after each identifier

version = "0.1.1a"

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "fastapi>=0.115.11",
    "more-itertools>=10.6.0",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pymilvus>=2.5.7",
    "pymupdf>=1.25.4",
    "pymupdf-fonts",
    "pymupdf4llm>=0.0.17",
    "redis>=5.2.1",
    "scalar-fastapi>=1.0.3",
    "termcolor>=2.5.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchdog>=6.0.0",
    "xattr>=1.1.4",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/extraction",
    "src/openai_wrappers",
    "src/processing",
    "src/telemetry",
    "src/vectors",
]

[tool.uv.sources]
core = { workspace = true }
extraction = { workspace = true }
openai_wrappers = { workspace = true }
processing = { workspace = true }
telemetry = { workspace = true }
vectors = { workspace = true }
