[project]
name = "pdf-chat"

version = "1.0.1"

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "fastapi>=0.115.11",
    "markdown>=3.8",
    "more-itertools>=10.6.0",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pymilvus>=2.5.7",
    "pymupdf>=1.25.4",
    "pymupdf-fonts",
    "pymupdf4llm>=0.0.17",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "rich>=14.0.0",
    "scalar-fastapi>=1.0.3",
    "termcolor>=2.5.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchdog>=6.0.0",
    "xattr>=1.1.4",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/evaluation",
    "src/extraction",
    "src/openai_wrappers",
    "src/processing",
    "src/telemetry",
    "src/vectors",
]

[tool.uv.sources]
core = { workspace = true }
evaluation = { workspace = true }
extraction = { workspace = true }
openai_wrappers = { workspace = true }
processing = { workspace = true }
telemetry = { workspace = true }
vectors = { workspace = true }
